# volumatrix

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: README.md  __init__.py  basic_generation.py  batch_processing.py  conversions.py  custom_visualization.py  demo_auto_visualization.py  export_formats.py  interactive_visualization.py  logger.py  run_all_examples.py  scene_management.py  transformations.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_models.py  test_utils.py
volumatrix/: __init__.py
volumatrix/api/: __init__.py  generate.py  io.py
volumatrix/core/: __init__.py  object.py  representations.py  scene.py
volumatrix/models/: __init__.py  base.py  dummy.py  registry.py
volumatrix/rendering/: __init__.py  preview.py
volumatrix/utils/: __init__.py  conversion.py  transforms.py
volumatrix/visualization/: __init__.py  camera.py  renderer.py  shaders.py  window.py
